# Robart

./: README.md
broadcast/dic/: dic.rs
history/: подключение.txt
history/MCU code/atmega328/: main.ino
history/MCU code/esp32cam/: app_http.cpp  camerawebserver.ino
history/MCU code/esp8266/: main.ino
sound/: .gitignore  Cargo.toml
sound/public/: jquery-3.6.0.min.js  robart.js
sound/src/: lib.rs  main.rs  parse_sound.rs
sound/static/templates/: index.html
