[package]
name = "sound"
version = "0.1.0"
authors = ["Eugene Yaroshenko <yaroshjeka@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
#image = {path = "image-master"}
png = "0.16"
num-complex = "0.2"
imageproc = "0.20"
#imageproc = {path = "imageproc-master"}
termion = "*"
# opencv="0.36"
rayon = "1.3"
crossbeam-channel = "0.2.6"
crossbeam = "0.3.2"
#edge-detection = "0.2.5"
#edge-detection = { path="edge-detection-rs-master"}
#edge-detection-wasm =  { path="edge-detection-wasm-master"}

actix-web = "2.0"
#actix-web ={ path="actix-web-2.0"}
actix-rt = "1.0"
#actix-multipart = "0.2.0"
actix-multipart =  { path="../actix-web-2.0/actix-multipart"}
actix-files = "0.2"
futures = "0.3.1"
sanitize-filename = "0.2"

actix-service = "1.0.0"

bytes = "0.5.2"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

reqwest= { version = "0.10", features = ["blocking", "json"] }
tempfile="3.1"
actix-http="1.0"
failure="0.1.8"
chrono="0.4.11"
ndarray-vision="0.1.1"
simplecv="0.0.1"
ndarray = "0.12"

edgy = "0.1.1"
pbr = "1.0.1"

wav="0.4"
wav_reader="0.1.3"
cmd_lib="0.7.8"

rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
